@@ -6,6 +6,7 @@ Release 0.7
 
 2009-06-19:
 - Add -I command line switch for specifying module paths.
+- Add -M command line switch for loading modules (with 'require').
 
 2009-06-18:
 - Remove Blob and use Binary everywhere.
